@@ -5,8 +5,9 @@ siduxcc (0.11.2) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * cli: hostname problem fixed
+  * cli: hostname function updated
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 04 Jul 2008 21:28:09 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 04 Jul 2008 21:34:51 +0200
 
 siduxcc (0.11.1) unstable; urgency=low
 
